cluster/uk.msrpi.com/longhorn-system/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-frontend-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.uk.msrpi.com`)
      kind: Rule
      services:
        - name: longhorn-frontend
          namespace: longhorn-system
          port: 80
          scheme: http
      middlewares:
        - name: auth
          namespace: kube-system
  tls:
    certResolver: cloudflare
    domains:
      - main: longhorn.uk.msrpi.com
